--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 
 html{
   overflow: hidden;
+  margin-top: 64px !important;
 }
 body{
   margin: 0;
@@ -14,8 +15,7 @@ body{
 .my-content{
 }
 md-sidenav-container{
-  padding-bottom: 65px;
-  margin-top: 64px !important;
+  padding-bottom: 55px;
 }
 .my-toolbar{
   position: fixed;
@@ -174,17 +174,26 @@ tree-node-expander{
 
 }
 @media only screen and (max-width: 540px){
-  md-sidenav-container{
+  html{
     margin-top: 54px !important;
   }
-  .mat-sidenav{
-    height: calc(100% - 50px) !important;
+  md-sidenav-container{
+    overflow-y: visible;
+    height: calc(100%) !important;
   }
+  .mat-sidenav-backdrop{
+    height: 120% !important;
+  }
+  .mat-sidenav{
+    height: calc(120% - 50px) !important;
+  }
+
 }
 
 @media only screen and (max-width: 480px){
   md-sidenav{
   	width: 320px !important;
+    height: 120% !important;
   }
 
   .info-item{
@@ -200,6 +209,13 @@ tree-node-expander{
   }
   #min-age{
     margin-left: 7px;
+  }
+
+  .product-title{
+    font-size: 23px;
+  }
+  .price{
+    font-size: 30px;
   }
 
 
